fix: add isGrid conditional + adjust dark mode css
Grid is default, but setting isGrid={false} will turn the area into flex

--- a/style/ijdnd.css
+++ b/style/ijdnd.css
@@ -1,26 +1,26 @@
 :root {
   --ijdnd-primary: hsl(155, 100%, 19.6%);
   --ijdnd-primary-light: hsl(75, 53%, 70.5%);
-  --ijdnd-primary-dark: hsl(155, 100%, 15%);
+  --ijdnd-primary-dark: hsl(155, 50%, 35%);
   --ijdnd-secondary: hsl(0, 0%, 85%);
   --ijdnd-secondary-light: hsl(0, 0%, 92%);
   --ijdnd-secondary-lighter: hsl(0, 0%, 95%);
   --ijdnd-secondary-dark: hsl(0, 0%, 70%);
   --ijdnd-light: hsl(0, 0%, 100%);
-  --ijdnd-dark: hsl(0, 0%, 15%);
+  --ijdnd-dark: hsl(0, 0%, 20%);
   --ijdnd-shadow: 0 2px 3px hsl(0,0%,80%);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --ijdnd-primary: hsl(155, 100%, 30%);
-    --ijdnd-primary-light: hsl(75, 60%, 60%);
+    --ijdnd-primary-light: hsl(75, 50%, 60%);
     --ijdnd-primary-dark: hsl(155, 100%, 25%);
-    --ijdnd-secondary: hsl(319, 85%, 38%);
-    --ijdnd-secondary-light: hsl(319, 85%, 48%);
-    --ijdnd-secondary-lighter: hsl(244, 40%, 15%);
-    --ijdnd-secondary-dark: hsl(319, 85%, 25%);
-    --ijdnd-light: hsl(244, 40%, 25%);
+    --ijdnd-secondary: hsl(338, 85%, 38%);
+    --ijdnd-secondary-light: hsl(338, 87%, 45%);
+    --ijdnd-secondary-lighter: hsl(230, 50%, 15%);
+    --ijdnd-secondary-dark: hsl(338, 85%, 25%);
+    --ijdnd-light: hsl(244, 40%, 15%);
     --ijdnd-dark: hsl(0, 0%, 90%);
     --ijdnd-shadow: 0 2px 4px hsl(0,0%,5%);
   }
@@ -61,13 +61,14 @@
   }
 
   .ijdnd-area {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(calc(100% / 4 - 1rem), 1fr));
+    &.grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(calc(100% / 4 - 1rem), 1fr));
+    }
   
     .tile__config {
       padding: 3rem 0.5rem 0.5rem;
       border: 2px dashed var(--ijdnd-primary-dark);
-      border-radius: 2px;
       cursor: grab;
       /* height: max-content; */
     }
@@ -136,6 +137,7 @@
     border-radius: 3px;
     height: 2rem;
     color: inherit;
+    transition: all 0.2s ease-in-out;
 
     &:hover {
       background-color: var(--ijdnd-secondary);
