--- a/style/local.css
+++ b/style/local.css
@@ -11,6 +11,6 @@ body {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    background-color: hsl(244, 40%, 10%);
+    background-color: hsl(230, 40%, 7%);
   }
 }
